[tool.poetry]
name = "debit-card-bc-seeding"
version = "0.1.0"
description = "Debit Card BC Seeding"
authors = ["Richard Mejia <richard.mejia@wallib.co>"]
readme = "README.md"
packages=[
  { include = "app" },
  { include = "main.py", from="."},
  { include = "logging.conf", from="."}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
mangum = "^0.17.0"
boto3 = "^1.34.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-lambda-build]
artifact_path = "package.zip"
